[project]
name = "aux-rescue"
version = "0.1.0"
description = "Restore auxiliary safetensors weights (MTP, EAGLE, Medusa, vision/audio encoders) that AutoModelForCausalLM.save_pretrained silently drops"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Tim Rohrbaugh" },
]
requires-python = ">=3.10"
keywords = ["safetensors", "transformers", "huggingface", "mtp", "eagle", "medusa", "vllm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "safetensors>=0.4",
    "huggingface-hub>=0.20",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
aux-rescue = "aux_rescue.cli:main"

[project.urls]
Homepage = "https://github.com/timrohrbaugh/aux-rescue"
Issues = "https://github.com/timrohrbaugh/aux-rescue/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aux_rescue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
